# RomBet

./: .env.example  .gitignore  Cargo.toml  README.md  config.toml  make_report.sh  start.sh
crates/application/: Cargo.toml
crates/application/src/: config.rs  controller.rs  lib.rs
crates/application/src/repository/: bet.rs  game.rs  game_stat.rs  mod.rs  simulation.rs  team.rs
crates/application/src/service/: bet.rs  game.rs  mod.rs  restart.rs  session.rs  simulation.rs
crates/application/src/service/bet/: mod.rs
crates/application/src/service/bet/tests/: classic.rs  mock.rs  mod.rs
crates/application/src/service/game/: mod.rs
crates/application/src/service/game/tests/: classic.rs  mock.rs
crates/application/src/service/simulation/: mod.rs
crates/application/src/service/simulation/tests/: mock.rs
crates/application/src/usecase/: bet.rs  game.rs  mod.rs  restart.rs  simulation.rs
crates/application/src/usecase/bet/: make_bet.rs  make_report.rs  mod.rs
crates/application/src/usecase/game/: create_round.rs  mod.rs  randomize_round.rs
crates/application/src/usecase/session/: mod.rs  restart.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/db/: Cargo.toml  diesel.toml
crates/db/migrations/2025-04-08-152635_create_team/: up.sql
crates/db/migrations/2025-04-08-155152_create_simulation/: up.sql
crates/db/migrations/2025-04-08-155525_create_game/: down.sql  up.sql
crates/db/migrations/2025-04-08-155926_create_bet/: down.sql  up.sql
crates/db/migrations/2025-04-08-160321_create_game_stat/: down.sql  up.sql
crates/db/src/: lib.rs  models.rs  schema.rs
crates/db/src/repository/: bet.rs  game.rs  game_stat.rs  mod.rs  simulation.rs  team.rs
crates/db/tests/: bet.rs  game.rs  game_stat.rs  simulation.rs  team.rs
crates/db_lite/: Cargo.toml
crates/db_lite/migrations/2025-04-08-152635_create_team/: down.sql  up.sql
crates/db_lite/migrations/2025-04-08-155152_create_simulation/: down.sql  up.sql
crates/db_lite/migrations/2025-04-08-155525_create_game/: up.sql
crates/db_lite/migrations/2025-04-08-155926_create_bet/: up.sql
crates/db_lite/migrations/2025-04-08-160321_create_game_stat/: up.sql
crates/db_lite/src/: lib.rs  models.rs  schema.rs
crates/db_lite/src/repository/: bet.rs  game.rs  game_stat.rs  mod.rs  simulation.rs  team.rs
crates/domain/: Cargo.toml
crates/domain/src/entity/: bet.rs  game.rs  game_stat.rs  mod.rs  simulation.rs  team.rs
crates/domain/src/value_object/: amount.rs  bet_statistics.rs  coefficient.rs  deviation.rs  event.rs  id.rs  margin.rs  mod.rs  past_results.rs  past_totals.rs  winner.rs
crates/infrastructure/: Cargo.toml
crates/infrastructure/src/: config.rs  logger.rs
crates/web-ctl/: Cargo.toml
crates/web-ctl/src/: error.rs  lib.rs  state.rs
crates/web-ctl/src/api/: balance.rs  create_round.rs  make_bet.rs  make_report.rs  mod.rs  randomize_round.rs  start.rs
frontend/: index.html  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  types.ts
frontend/src/api/: client.ts
frontend/src/components/: Balance.tsx  BetForm.tsx  CreateRoundButton.tsx  GameResults.tsx  Header.tsx  ReportModal.tsx  RoundInfo.tsx
frontend/src/hooks/: useApi.ts
report/schm/: cd.drawio  er.drawio  uml.drawio  us.drawio
src/: main.rs
