[package]
name = "RomBet"
version.workspace = true
edition.workspace = true
publish = false

[workspace]
members = [ 
  "crates/application", 
  "crates/cli", 
  "crates/db",
  "crates/domain", "crates/infrastructure",
]

[workspace.package]
version = "0.1.0"
edition = "2024"

[dependencies]

[patch.crates-io]
domain          = { path = "crates/domain"          }
application     = { path = "crates/application"     }
db              = { path = "crates/db"              }
cli             = { path = "crates/cli"             }
