[package]
name = "RomBet"
version.workspace = true
edition.workspace = true
publish = false

[workspace]
members = [ 
  "crates/application", 
  "crates/cli", 
  "crates/db",
  "crates/domain", 
  "crates/infrastructure", 
  "crates/web-ctl",
]

[workspace.package]
version = "0.1.0"
edition = "2024"

[dependencies]
web-ctl = { path = "crates/web-ctl" }