[package]
name = "db"
version.workspace = true
edition.workspace = true

[dependencies]
domain          = { path = "../domain"          }
application     = { path = "../application"     }

diesel = { version = "2.2.9", features = ["postgres", "uuid"] }
dotenv = "0.15.0"
uuid = {version="1.16.0", features = ["v7"]}
anyhow = "1.0.97"
serde = "1.0.219"
rmp-serde = "1.3.0"
