[package]
name = "db"
version.workspace = true
edition.workspace = true

[dependencies]
domain          = { path = "../domain"          }
application     = { path = "../application"     }
diesel = { version = "2.2.9", features = ["postgres", "uuid", "r2d2"] }
uuid = {version="1.16.0", features = ["v7"]}
anyhow = "1.0.97"
serde = "1.0.219"
rmp-serde = "1.3.0"
dotenv = "0.15.0"

[dev-dependencies]
mockall = "0.13.1"
