[package]
name = "db_lite"
version.workspace = true
edition.workspace = true

[dependencies]
domain          = { path = "../domain"          }
application     = { path = "../application"     }
diesel = { version = "2.2.9", features = ["sqlite", "returning_clauses_for_sqlite_3_35", "r2d2"] }
dotenv = "0.15.0"
anyhow = "1.0.97"
serde = "1.0.219"
rmp-serde = "1.3.0"
uuid = {version="1.16.0", features = ["v7"]}
