[package]
name = "web-ctl"
version.workspace = true
edition.workspace = true

[dependencies]
domain          = { path = "../domain"          }
application     = { path = "../application"     }
db              = { path = "../db"              }
infrastructure  = { path = "../infrastructure"  }

axum = { version = "0.8.4", features = ["json", "macros"] }
dotenv = "0.15.0"
tokio = { version = "1.46.1", features = ["rt-multi-thread"] }
anyhow = "1.0.99"
tracing = "0.1.41"
serde = { version = "1.0.219", features = ["derive"] }
uuid = { version="1.16.0", features = ["v4"] }